banner part done

--- a/style.css
+++ b/style.css
@@ -1,1 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+}
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 130px;
+    padding: 0 150px;
+}
+.navbar > p {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 28px;
+    font-weight: 800;
+}
+.navbar > button {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 17px 24px 17px 24px;
+    border: 1px solid rgb(13, 19, 33);
+    border-radius: 8px;
+    opacity: 0.8;
+}
+.navbar > button:hover{
+    background: rgb(13, 19, 33);
+    color: rgb(255, 255, 255);
+    transition: 0.6s;
+    opacity: 1;
+}
+
+
+.banner{
+    background-image: url("./img/Hero-bg.png");
+    height: 652px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.banner > h1 {
+    margin: 32px 0 24px 0;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 48px;
+    font-weight: 800;
+}
+.banner > p {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    opacity: 0.7;
+    margin-bottom: 32px;
+}
+.banner > button{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 21px 24px 21px 24px;
+    border: 1px solid rgb(13, 19, 33);
+    border-radius: 8px;
+    
+}
+.banner > button:hover{
+    background: rgb(13, 19, 33);
+    color: rgb(255, 255, 255);
+    transition: 0.6s;
+}
