--- a/style.css
+++ b/style.css
@@ -283,3 +283,62 @@
     background-color: rgba(255, 255, 255, 0);
     text-decoration: underline;
 }
+
+.nexttarget{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0 300px;
+    margin-bottom: 50px;
+}
+.nexttarget > h3 {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 800;
+}
+.nexttarget > p {
+    margin: 24px 0 48px 0;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    opacity: 0.7;
+}
+.react{
+    display: flex;
+    text-align: left;
+    padding: 40px;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 16px;
+    margin-bottom: 24px;
+    width: 100%;
+}
+.react > img {
+    margin-right: 24px;
+}
+.reacttext > h4 {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 800;
+}
+.reacttext > p {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    opacity: 0.7;
+    margin: 8px 0 24px 0;
+}
+.reacttext > button { 
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 700;
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    text-decoration: underline;
+}
